--- a/README.org
+++ b/README.org
@@ -26,6 +26,7 @@
       - [[#set-the-value-of-a-field-to-current-date][Set the value of a field to current date]]
       - [[#increment-the-value-of-the-field-by-the-specified-amount][Increment the value of the field by the specified amount]]
     - [[#aggregation-operators][Aggregation Operators]]
+      - [[#match][Match]]
   - [[#run-the-command][Run the command]]
     - [[#insert-documents][Insert Documents]]
       - [[#insert-one-document][Insert one document]]
@@ -226,6 +227,12 @@ update_operator = {
 
 #+BEGIN_SRC python
 pipeline = []
+#+END_SRC
+
+**** Match
+
+#+BEGIN_SRC python
+pipeline.append({ "$match": { "status": "A" } })
 #+END_SRC
 
 ** Run the command
